# weQuak

./: .gitignore  .npmrc  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  BUILD_WINDOWS_ALTERNATIVES.md  CALL_FEATURE.md  DEPLOYMENT.md  DIAGNOSTIC_CHECKLIST.md  FIREBASE_SETUP.md  FIRESTORE_RULES.txt  FIX_CORS_ERROR.md  FIX_FIRESTORE_PERMISSIONS.md  FREE_DISK_SPACE.md  GET_WINDOWS_EXE.md  NOTIFICATIONS_SETUP.md  QUICK_FIX.md  STORAGE_RULES.txt  TAURI_SETUP.md  TEST_FEATURES.md  TROUBLESHOOTING.md  VERCEL_DEPLOY.md  electron-builder.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-windows.yml
docs/: blueprint.md
electron/: main.js
public/downloads/: README.md  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: globals.css  layout.tsx  page.tsx
src/app/downloads/: page.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/auth/: AuthForm.tsx
src/components/chat/: ChatWindow.tsx  Header.tsx  MessageInput.tsx  MessageList.tsx  RoomList.tsx  UserInviteList.tsx  UserList.tsx
src/context/: AuthContext.tsx
src/hooks/: useNotifications.ts
src/lib/: firebase.ts  firebaseConfig.ts  smsNotifications.ts
